[package]
name = "solis_physics_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for SolisPhysics by Floyden generated using bindgen"
repository = "https://github.com/davidmc971/solis_physics_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66"
